@@ -25,7 +25,7 @@
 
 // Calibrates underlying swaptions to the input volatility matrix.
 void calibrateModel2(const boost::shared_ptr<QuantLib::ShortRateModel>& model,
-                     const std::vector<boost::shared_ptr<QuantLib::CalibrationHelper> > &helpers,
+                     const std::vector<boost::shared_ptr<QuantLib::BlackCalibrationHelper> > &helpers,
                      QuantLib::Real lambda,
                      Rcpp::NumericVector &swaptionMat,
                      Rcpp::NumericVector &swapLengths,
@@ -154,21 +154,21 @@ Rcpp::List affineWithRebuiltCurveEngine(Rcpp::List rparam,
         swaptionMaturities.push_back(QuantLib::Period(swaptionMat[i], QuantLib::Years));
     
     // Swaptions used for calibration
-    std::vector<boost::shared_ptr<QuantLib::CalibrationHelper> > swaptions;
+    std::vector<boost::shared_ptr<QuantLib::BlackCalibrationHelper> > swaptions;
 
     // List of times that have to be included in the timegrid
     std::list<QuantLib::Time> times;
     for (i=0; i<(QuantLib::Size)numRows; i++) {
         //boost::shared_ptr<QuantLib::Quote> vol(new QuantLib::SimpleQuote(swaptionVols[i][numCols-i-1]));
         boost::shared_ptr<QuantLib::Quote> vol(new QuantLib::SimpleQuote(swaptionVols(i)));
-        swaptions.push_back(boost::shared_ptr<QuantLib::CalibrationHelper>(new QuantLib::SwaptionHelper(swaptionMaturities[i],
-                                                                                                        QuantLib::Period(swapLengths[i], QuantLib::Years),
-                                                                                                        QuantLib::Handle<QuantLib::Quote>(vol),
-                                                                                                        swFloatingLegIndex,
-                                                                                                        swFloatingLegIndex->tenor(),
-                                                                                                        swFloatingLegIndex->dayCounter(),
-                                                                                                        swFloatingLegIndex->dayCounter(),
-                                                                                                        rhTermStructure)));
+        swaptions.push_back(boost::shared_ptr<QuantLib::BlackCalibrationHelper>(new QuantLib::SwaptionHelper(swaptionMaturities[i],
+                                                                                                             QuantLib::Period(swapLengths[i], QuantLib::Years),
+                                                                                                             QuantLib::Handle<QuantLib::Quote>(vol),
+                                                                                                             swFloatingLegIndex,
+                                                                                                             swFloatingLegIndex->tenor(),
+                                                                                                             swFloatingLegIndex->dayCounter(),
+                                                                                                             swFloatingLegIndex->dayCounter(),
+                                                                                                             rhTermStructure)));
         swaptions.back()->addTimesTo(times);
     }
     
